@@ -17,6 +17,10 @@ _Description: Debian version to install:
  that receives many of the new versions from unstable if they are not too
  buggy.
 
+Template: mirror/codename
+Type: string
+Description: codename for the selected suite (internal use)
+
 Template: mirror/checking_title
 Type: text
 _Description: Checking the Debian archive mirror
