@@ -38,6 +38,8 @@ choose-mirror (1.16) UNRELEASED; urgency=low
 
   [ Frans Pop ]
   * Make sure mirror/protocol template is included.
+  * After a suite has been selected, also determine its codename. This
+    can be used later to set apt sources by codename.
 
  -- Frans Pop <fjp@debian.org>  Sun, 23 Oct 2005 15:59:08 +0200
 
